Bug 1042192 - Use Cache2 I/O thread for callbacks from CacheFileIOManager, r=sworkman